--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "electron-log": "^2.2.14",
     "electron-store": "^2.0.0",
     "functional-electron-menu": "^1.0.0",
+    "kill-port": "^1.2.0",
     "opn": "^5.3.0",
     "prop-types": "^15.6.1",
     "react": "^16.4.0",
